--- a/app/src/main/res/layout-night/blog_item.xml
+++ b/app/src/main/res/layout-night/blog_item.xml
@@ -6,7 +6,8 @@
     android:layout_marginTop="10dp"
     android:elevation="5dp"
     app:cardCornerRadius="9dp"
-    app:cardElevation="3dp"
+    app:cardBackgroundColor="@color/black"
+    app:cardElevation="5dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -57,7 +58,7 @@
             android:padding="5dp"
             android:text="New Blogger"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/cardView3"
             app:layout_constraintEnd_toEndOf="parent"
@@ -92,11 +93,11 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="5dp"
             android:fontFamily="@font/montserrat_light"
-            android:letterSpacing="0.03"
+            android:letterSpacing="0.02"
             android:lineHeight="22sp"
             android:maxLines="4"
             android:text="I recently read a helpful article on Hashnode by Simon Egersand titled Write Git Commit Messages Your Colleagues Will Love,and it inspired me to dive a little deeper into understanding what makes a Git commit good or bad. "
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/divider"
@@ -126,7 +127,7 @@
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/montserrat_semibold"
             android:text="20"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/readMoreButton"
             app:layout_constraintEnd_toStartOf="@+id/likeButton"
@@ -139,6 +140,7 @@
             android:layout_marginEnd="10dp"
             android:background="@android:color/transparent"
             android:src="@drawable/heart_black"
+            android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/likeCount"
             app:layout_constraintEnd_toStartOf="@+id/postSaveButton"
             app:layout_constraintTop_toTopOf="@+id/likeCount" />
