--- a/app/src/main/res/layout-night/activity_edit_blog.xml
+++ b/app/src/main/res/layout-night/activity_edit_blog.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditBlogActivity">
-
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="0dp"
@@ -21,6 +20,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/love_ya_like_a_sister"
                 android:text="Blog Title"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/imageButton"
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/love_ya_like_a_sister"
                 android:text="Blog Description"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/blogTitle"
@@ -128,10 +128,11 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/appColor"
                 android:fontFamily="@font/love_ya_like_a_sister"
-                android:text="EDIT BLOG"
+                android:text="SAVE BLOG"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:cornerRadius="9dp"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/blogDescription"
                 app:layout_constraintHorizontal_bias="0.497"
@@ -146,14 +147,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginStart="40dp"
                 android:padding="5dp"
                 android:visibility="gone"
-                app:SpinKit_Color="@color/appColor"
+                app:SpinKit_Color="@color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/EditBlogButton"
-                app:layout_constraintEnd_toEndOf="@+id/EditBlogButton"
                 app:layout_constraintStart_toStartOf="@+id/EditBlogButton"
                 app:layout_constraintTop_toTopOf="@+id/EditBlogButton" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
