--- a/app/src/main/res/layout-night/activity_login.xml
+++ b/app/src/main/res/layout-night/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".register.LoginActivity">
     <ImageView
         android:id="@+id/imageView4"
@@ -24,7 +25,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Blog"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +52,7 @@
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Share your stories\nwith us."
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -135,7 +136,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="New Here? Click on Register"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/login_button"
         app:layout_constraintStart_toStartOf="@+id/login_button"
         app:layout_constraintTop_toBottomOf="@+id/login_button"
@@ -149,7 +150,7 @@
         android:backgroundTint="@android:color/transparent"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Register"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="@+id/register_new_here"
