--- a/app/src/main/res/layout-night/activity_profile.xml
+++ b/app/src/main/res/layout-night/activity_profile.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="21dp"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="User name"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/cardView5"
@@ -70,11 +70,11 @@
         android:background="@android:color/transparent"
         android:drawableStart="@drawable/add_new_artical"
         android:drawablePadding="28dp"
-        android:drawableTint="@color/black"
+        android:drawableTint="@color/white"
         android:fontFamily="@font/montserrat_semibold"
 
         android:text="Add new article"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/divider3"
         app:layout_constraintStart_toStartOf="@+id/divider3"
         app:layout_constraintTop_toBottomOf="@+id/divider3" />
@@ -87,10 +87,10 @@
         android:background="@android:color/transparent"
         android:drawableStart="@drawable/articles"
         android:drawablePadding="28dp"
-        android:drawableTint="@color/black"
+        android:drawableTint="@color/white"
         android:fontFamily="@font/montserrat_semibold"
         android:text="Your articles"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/addNewBlogButton"
         app:layout_constraintStart_toStartOf="@+id/addNewBlogButton"
         app:layout_constraintTop_toBottomOf="@+id/addNewBlogButton" />
@@ -103,10 +103,10 @@
         android:background="@android:color/transparent"
         android:drawableStart="@drawable/log_out"
         android:drawablePadding="28dp"
-        android:drawableTint="@color/black"
+        android:drawableTint="@color/white"
         android:fontFamily="@font/montserrat_semibold"
         android:text="Log out"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/articlesButton"
         app:layout_constraintStart_toStartOf="@+id/articlesButton"
         app:layout_constraintTop_toBottomOf="@+id/articlesButton" />
