--- a/app/src/main/res/layout-night/activity_read_more.xml
+++ b/app/src/main/res/layout-night/activity_read_more.xml
@@ -38,7 +38,7 @@
         android:text="Blog Description"
         android:textColor="@color/appColor"
         android:textSize="20sp"
-
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/backButton"
         app:layout_constraintStart_toEndOf="@+id/backButton"
         app:layout_constraintTop_toTopOf="@+id/backButton" />
@@ -82,7 +82,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/montserrat_light"
         android:text="TextView"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/cardView4"
         app:layout_constraintStart_toEndOf="@+id/cardView4"
@@ -116,7 +116,7 @@
             android:fontFamily="@font/montserrat_light"
             android:padding="10dp"
             android:text="TextView"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold" />
     </ScrollView>
 
