--- a/app/src/main/res/layout-night/activity_sign_in_and_registration.xml
+++ b/app/src/main/res/layout-night/activity_sign_in_and_registration.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="15dp"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Blog"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Share your stories\nwith us."
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -100,7 +100,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="You already have an account"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/register_button"
         app:layout_constraintStart_toStartOf="@+id/register_button"
         app:layout_constraintTop_toBottomOf="@+id/register_button" />
@@ -113,7 +113,7 @@
         android:backgroundTint="@android:color/transparent"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Login"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="@+id/register_new_here"
@@ -124,6 +124,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
+        android:layout_marginTop="10dp"
         android:layout_width="64dp"
         android:layout_height="64dp"
         app:cardCornerRadius="200dp"
