--- a/app/src/main/res/layout-night/activity_splash.xml
+++ b/app/src/main/res/layout-night/activity_splash.xml
@@ -25,7 +25,7 @@
         android:fontFamily="@font/love_ya_like_a_sister"
         android:gravity="center"
         android:text="Blog"
-        android:textColor="@color/appColor"
+        android:textColor="@color/white"
         android:textSize="70sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:id="@+id/imageView6"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/write1"
+        android:src="@drawable/write"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="@+id/textView13"
         app:layout_constraintStart_toStartOf="@+id/textView" />
