--- a/app/src/main/res/layout-night/activity_welcome.xml
+++ b/app/src/main/res/layout-night/activity_welcome.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".register.WelcomeActivity">
 
     <ImageView
@@ -25,7 +26,7 @@
         android:layout_marginTop="100dp"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Blog"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -50,7 +51,7 @@
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Share your story \nwith us."
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -64,7 +65,7 @@
         android:backgroundTint="@android:color/transparent"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Login"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
@@ -81,7 +82,7 @@
         android:layout_marginTop="36dp"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="New Here?"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/loginButton"
         app:layout_constraintStart_toStartOf="@+id/loginButton"
         app:layout_constraintTop_toBottomOf="@+id/loginButton" />
@@ -94,7 +95,7 @@
         android:backgroundTint="@android:color/transparent"
         android:fontFamily="@font/love_ya_like_a_sister"
         android:text="Register"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
