--- a/app/src/main/res/layout/activity_add_blog.xml
+++ b/app/src/main/res/layout/activity_add_blog.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditBlogActivity">
+    tools:context=".AddBlogActivity">
 
     <ImageView
         android:id="@+id/imageView4"
@@ -19,21 +21,25 @@
         app:srcCompat="@drawable/background" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/scrollView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:fontFamily="@font/love_ya_like_a_sister"
-                android:text="Edit Your Blog here"
+                android:text="Add New Blog here"
                 android:textColor="@color/appColor"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageButton"
@@ -46,8 +52,9 @@
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-
                 android:background="@drawable/serch_shape"
+                android:elevation="1dp"
+                android:padding="5dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/back" />
@@ -56,13 +63,14 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp"
                 android:fontFamily="@font/love_ya_like_a_sister"
                 android:text="Blog Title"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/imageButton"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -73,6 +81,7 @@
                 android:layout_marginEnd="10dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
+                app:counterTextColor="@color/appColor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView11"
                 app:layout_constraintTop_toBottomOf="@+id/textView11">
@@ -83,6 +92,7 @@
                     android:background="@drawable/edit_text_blue_shape"
                     android:fontFamily="@font/montserrat_semibold"
                     android:hint="Blog Title"
+                    android:maxLength="100"
                     android:textColor="@color/appColor" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,50 +108,49 @@
                 app:layout_constraintStart_toStartOf="@+id/blogTitle"
                 app:layout_constraintTop_toBottomOf="@+id/blogTitle" />
 
-            <com.google.android.material.textfield.TextInputLayout
+            <EditText
                 android:id="@+id/blogDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                app:layout_constraintEnd_toEndOf="@+id/blogTitle"
-                app:layout_constraintStart_toStartOf="@+id/textView12"
-                app:layout_constraintTop_toBottomOf="@+id/textView12">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/edit_text_blue_shape"
-                    android:fontFamily="@font/montserrat_light"
-                    android:gravity="top"
-                    android:hint="Blog Description"
-                    android:minHeight="300dp"
-                    android:textColor="@color/black" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/EditBlogButton"
-                android:layout_width="0dp"
-                android:layout_height="56dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/appColor"
-                android:fontFamily="@font/love_ya_like_a_sister"
-                android:text="EDIT BLOG"
-                android:textSize="18sp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/edit_text_blue_shape"
+                android:fontFamily="@font/montserrat_light"
+                android:gravity="top"
+                android:hint="Blog Description"
+                android:minHeight="300dp"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:textStyle="bold"
-                app:cornerRadius="9dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/blogDescription"
-                app:layout_constraintHorizontal_bias="0.497"
-                app:layout_constraintStart_toStartOf="@+id/blogDescription"
-                app:layout_constraintTop_toBottomOf="@+id/blogDescription"
-                app:layout_constraintVertical_bias="0.228" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/addBlogButton"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_back"
+                android:elevation="5dp"
+                android:fontFamily="@font/love_ya_like_a_sister"
+                android:text="ADD BLOG"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/blogDescription" />
 
             <com.github.ybq.android.spinkit.SpinKitView
-                android:id="@+id/loaderEditBlog"
+                android:id="@+id/loaderAddBlog"
                 style="@style/SpinKitView.Circle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -149,11 +158,12 @@
                 android:padding="5dp"
                 android:visibility="gone"
                 app:SpinKit_Color="@color/appColor"
-                app:layout_constraintBottom_toBottomOf="@+id/EditBlogButton"
-                app:layout_constraintEnd_toEndOf="@+id/EditBlogButton"
-                app:layout_constraintStart_toStartOf="@+id/EditBlogButton"
-                app:layout_constraintTop_toTopOf="@+id/EditBlogButton" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintBottom_toBottomOf="@+id/addBlogButton"
+                app:layout_constraintEnd_toEndOf="@+id/addBlogButton"
+                app:layout_constraintStart_toStartOf="@+id/addBlogButton"
+                app:layout_constraintTop_toTopOf="@+id/addBlogButton" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
